[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Menues/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Resources/Menues/Fonts/Tourmaline-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Resources/Menues/Buttons/main_button_normal.png" type="Texture" id=3]
[ext_resource path="res://Resources/Menues/Buttons/main_button_pressed.png" type="Texture" id=4]
[ext_resource path="res://Resources/Menues/Buttons/main_button_hover.png" type="Texture" id=5]
[ext_resource path="res://Resources/Menues/Backgrounds/menu_background.png" type="Texture" id=6]
[ext_resource path="res://Resources/Graphics/Other/UI/Controls.png" type="Texture" id=7]
[ext_resource path="res://Resources/Menues/Fonts/Ubuntu-Bold.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 17
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 1
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 32
outline_size = 1
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 112
font_data = ExtResource( 2 )

[node name="MainMenu" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 2, 0 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
centered = false

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -140.0
margin_right = 240.0
margin_bottom = 516.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Asylum" type="TextureButton" parent="Menu"]
margin_right = 480.0
margin_bottom = 128.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Asylum"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jump King" type="TextureButton" parent="Menu"]
visible = false
margin_top = 132.0
margin_right = 480.0
margin_bottom = 260.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Jump King"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "jump king"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minecraft" type="TextureButton" parent="Menu"]
visible = false
margin_top = 132.0
margin_right = 480.0
margin_bottom = 260.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Minecraft"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Minecraft"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boshy" type="TextureButton" parent="Menu"]
visible = false
margin_top = 132.0
margin_right = 480.0
margin_bottom = 260.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Boshy"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Boshy"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="Menu"]
margin_top = 132.0
margin_right = 480.0
margin_bottom = 260.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureButton" parent="Menu"]
margin_top = 264.0
margin_right = 480.0
margin_bottom = 392.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Credits"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="Menu"]
margin_top = 396.0
margin_right = 480.0
margin_bottom = 524.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Quit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Node2D" parent="."]
visible = false

[node name="Settings" type="VBoxContainer" parent="Settings"]
margin_left = 860.0
margin_top = 340.0
margin_right = 1056.0
margin_bottom = 466.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Settings/Settings"]
margin_right = 196.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="Settings/Settings/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Back to menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="HBoxContainer" parent="Settings/Settings"]
margin_top = 24.0
margin_right = 196.0
margin_bottom = 61.0

[node name="Label" type="Label" parent="Settings/Settings/Fullscreen"]
margin_right = 163.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "FullScreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Checkbox" type="CheckBox" parent="Settings/Settings/Fullscreen"]
margin_left = 167.0
margin_right = 191.0
margin_bottom = 37.0

[node name="Borderless" type="HBoxContainer" parent="Settings/Settings"]
margin_top = 65.0
margin_right = 196.0
margin_bottom = 102.0

[node name="Label" type="Label" parent="Settings/Settings/Borderless"]
margin_right = 168.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Borderless"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Checkbox" type="CheckBox" parent="Settings/Settings/Borderless"]
margin_left = 172.0
margin_right = 196.0
margin_bottom = 37.0

[node name="DeleteSave" type="Button" parent="Settings/Settings"]
margin_top = 106.0
margin_right = 196.0
margin_bottom = 126.0

[node name="Label" type="Label" parent="Settings/Settings/DeleteSave"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.337255, 0.337255, 1 )
text = "Delete Save"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Sprite" parent="Settings"]
position = Vector2( 960, 760 )
texture = ExtResource( 7 )

[node name="IntroCredits" type="Node2D" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="IntroCredits"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0.0196078, 0.113725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="IntroCredits"]
margin_left = 214.0
margin_top = 189.0
margin_right = 1717.0
margin_bottom = 305.0
custom_fonts/font = SubResource( 6 )
text = "A GAME BY The seahorse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="IntroCredits"]
margin_left = 113.0
margin_top = 443.0
margin_right = 1809.0
margin_bottom = 576.0
custom_fonts/font = SubResource( 6 )
text = "\"The Seahorse\" on Youtube"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="IntroCredits"]
margin_left = 331.0
margin_top = 687.0
margin_right = 1596.0
margin_bottom = 803.0
custom_fonts/font = SubResource( 6 )
text = "@seahorseG in chat"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" type="Tween" parent="IntroCredits"]

[node name="FadeOut" type="Tween" parent="IntroCredits"]

[node name="Timer" type="Timer" parent="IntroCredits"]
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="Menu/Asylum" to="." method="_on_Overworld_pressed"]
[connection signal="pressed" from="Menu/Jump King" to="." method="_on_Jump_King_pressed"]
[connection signal="pressed" from="Menu/Minecraft" to="." method="_on_Minecraft_pressed"]
[connection signal="pressed" from="Menu/Boshy" to="." method="_on_Boshy_pressed"]
[connection signal="pressed" from="Menu/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Menu/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Menu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Settings/Settings/Button" to="." method="_on_BackMenu_pressed"]
[connection signal="toggled" from="Settings/Settings/Fullscreen/Checkbox" to="." method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="Settings/Settings/Borderless/Checkbox" to="." method="_on_Borderless_toggled"]
[connection signal="pressed" from="Settings/Settings/DeleteSave" to="." method="_on_DeleteSave_pressed"]
[connection signal="tween_all_completed" from="IntroCredits/FadeIn" to="." method="_on_FadeIn_tween_all_completed"]
[connection signal="tween_all_completed" from="IntroCredits/FadeOut" to="." method="_on_FadeOut_tween_all_completed"]
[connection signal="timeout" from="IntroCredits/Timer" to="." method="_on_Timer_timeout"]
